<resources>
    <string name="app_name">Word Teacher</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Налаштування</string>
    <string name="answer">Введіть відповідь</string>

    <string name="okButton">OK</string>
    <string name="cancelButton">Cancel</string>


    <string name="onlineTranslate">Перекладач</string>
    <string name="aboutButton">Про програму</string>
    <string name="exitButton">Вихід</string>

    <string name="textField">WordTeacher - програма для вивчення англійских слів. Вона включає в себе: \n
        1. Простий інтерфес  \n
        2. Додавання та видалення тестів  \n
        3. Зберігання та сортування своїх даних \n\n
        Якщо у вас є якісь пропозиції або скарги, то звяжіться зі мною</string>
    <string name="mailField"> sasha6427@gmail.com</string>
    <string name="backButton">Назад</string>
    <string name="buttonChecked">Get checked items</string>
    <string name="feedBack">Залишити відгук</string>



    <string name="note1">You pick</string>
    <string name="note2">right answers from</string>
    <string name="note3">Your rating is</string>
    <string name="startButton">Старт</string>
    <string name="отзыв">Відгук</string>
    <string name="submit">Далі</string>
    <string name="nextQuestion">Наступне питання</string>
    <string name="restart_quiz">Почати спочатку</string>
    <string name="goToMainMenu">Увійти</string>
    <string name="Увійти">Увійти</string>
    <string name="Далі">Далі</string>
    <string name="addNewQuestion">Додати питання</string>
    <string name="результати">Результати</string>
    <string name="спробуватиЩеРаз">Спробувати ще раз</string>
    <string name="вГоловнеМеню">В головне меню</string>
    <string name="імя">Ім\'я</string>
    <string name="призвіще">Призвіще</string>

    <string name="відмінно">Відмінно!</string>
    <string name="добре">Добре!</string>
    <string name="задовільно">Задовільно!</string>
    <string name="погано">Погано!</string>
    <string name="вітаємо">Вітаємо!</string>
    <string name="виПройшлиТест">! Ви пройшли тест.</string>
    <string name="вашРезультатТакий">Ваш результат такий:</string>
    <string name="правильних">Правильних:</string>
    <string name="непрвильних">Неправильних:</string>
    <string name="вашаОцінка">Ваша оцінка:</string>
    <string name="відправитиВідгук">Відправити відгук</string>
    <string name="Назад">Назад</string>
    <string name="питання">Питання:</string>
    <string name="відповідь1">Відповідь 1</string>
    <string name="відповідь2">Відповідь 2</string>
    <string name="відповідь3">Відповідь 3</string>
    <string name="відповідь4">Відповідь 4</string>
    <string name="видалитиОстанній">Видалити</string>
    <string name="додати">Додати</string>


</resources>



