<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/wall">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="100dp">

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="200dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/імя"
            android:textColor="#000000"
            android:ems="10"
            android:id="@+id/name"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/призвіще"
            android:textColor="#000000"
            android:ems="10"
            android:id="@+id/surname"
            android:layout_marginRight="50dp"
            android:layout_marginLeft="50dp" />

        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/Увійти"
            android:textColor="#000000"
            android:id="@+id/login"
            android:onClick="login"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="230dp">

    </LinearLayout>
</LinearLayout>