<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:id="@+id/menu"
    android:background="@mipmap/wall"
    android:orientation="vertical"
    android:weightSum="1">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="308dp"
        android:orientation="vertical"
        android:gravity="center">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/startButton"
                    android:id="@+id/startButton"
                    android:height="20dp"
                    android:width="150dp"
                    android:onClick="onClick"
                    android:textColor="#000000"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="0dp" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/onlineTranslate"
                    android:id="@+id/onlineTranslate"
                    android:height="20dp"
                    android:width="150dp"
                    android:onClick="onClick"
                    android:textColor="#000000"
                    android:layout_gravity="center_horizontal" />

                <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/aboutButton"
                        android:id="@+id/aboutButton"
                        android:height="20dp"
                        android:width="150dp"
                        android:onClick="onClick"
                        android:textColor="#000000"
                        android:layout_gravity="center_horizontal" />

                <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/exitButton"
                        android:id="@+id/exitButton"
                        android:height="20dp"
                        android:width="150dp"
                        android:onClick="onClick"
                        android:textColor="#000000"
                        android:layout_gravity="center_horizontal" />

    </LinearLayout>


</LinearLayout>