<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/wall"
    android:gravity="center"
    android:weightSum="1">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="191dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="233dp"
            android:text="New Text"
            android:textColor="#000000"
            android:id="@+id/tvView"
            android:gravity="center_vertical|center_horizontal" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="159dp">

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="200dp">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/результати"
            android:textColor="#000000"
            android:id="@+id/results"
            android:onClick="resultClick"
            android:focusable="false" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/спробуватиЩеРаз"
            android:textColor="#000000"
            android:id="@+id/new_test"
            android:onClick="resultClick" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/вГоловнеМеню"
            android:textColor="#000000"
            android:id="@+id/main_menu"
            android:onClick="resultClick" />
    </LinearLayout>


</LinearLayout>